syntax = "proto3";

import "EchoAttributes.proto";

package tester_echo;

message GpioOut {
  bool value = 1;
}

message GpioIn {
  bool value = 1;
  bool valueN = 2;
}

service Command
{
    option (service_id) = 1;

    rpc RunGpioTest(GpioOut) returns (Nothing) { option (method_id) = 1; }
}

service Reponse
{
    option (service_id) = 2;

    rpc GpioTestResult(GpioIn) returns (Nothing) { option (method_id) = 1; }
}